# 6sCourseWork

./: README.md  manage.py  pyproject.toml
blog/migrations/: 0001_initial.py
mailing/: apps.py  utils.py  views.py
mailing/migrations/: 0001_initial.py  0002_initial.py
mailscheduler/: asgi.py  settings.py  urls.py  wsgi.py
static/js/: materialize.js
users/: views.py
users/migrations/: 0001_initial.py
